RESOLVED FIXED167158
[GStreamer] media source tests crashing
https://bugs.webkit.org/show_bug.cgi?id=167158
Summary [GStreamer] media source tests crashing
Gustavo Noronha (kov)
Reported 2017-01-18 04:47:04 PST
[GStreamer] media source tests crashing
Attachments
Patch (1.92 KB, patch)
2017-01-18 04:49 PST, Gustavo Noronha (kov)
cgarcia: review+
calvaris: commit-queue-
Gustavo Noronha (kov)
Comment 1 2017-01-18 04:49:21 PST
Xabier Rodríguez Calvar
Comment 2 2017-01-18 07:58:36 PST
Comment on attachment 299132 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=299132&action=review > Source/WebCore/ChangeLog:15 > + (WebCore::AppendPipeline::AppendPipeline): do not adopt the GStPipeline Nit: GstPipeline
Gustavo Noronha (kov)
Comment 3 2017-01-18 08:44:02 PST
Note You need to log in before you can comment on or make changes to this bug.