[GStreamer] media source tests crashing https://bugs.webkit.org/show_bug.cgi?id=167158

Reviewed by Carlos Garcia Campos.

This fixes several media source tests which are asserting on debug builds,
such as:

- fast/history/page-cache-removed-source-buffer.html
- imported/w3c/web-platform-tests/media-source/

* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::AppendPipeline): do not adopt the GStPipeline
upon creation. A regular assignment will do the right thing, sinking the
floating ref.

Canonical link: https://commits.webkit.org/184204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210851 268f45cc-cd09-0410-ab3c-d52691b4dbfc